--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 
+/* test */
+
 /* GLOBAL STYLING */
 body {
     background-image: url(../src/img/trivia.jpg);
